fixed overflow main

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ header a{
 /* main */
 main{
     height: calc(100vh - 7.3rem);
+    overflow:auto;
 }
 .arrow-left{
     padding-left: 20px;
@@ -112,11 +113,12 @@ main{
 }
 
 .single-cam{
+    width: calc(100%/5);
     padding: 5px;
     position: relative;
 }
 .single-cam img{
-    width: 300px;
+    width: 100%;
     display: block;
 }
 .names{
